# power_strip_sim

./: README.MD
power_strip_sim/: CMakeLists.txt  README.MD
src/: fake_arduino.py  mqtt_fake_arduino.py  mqtt_power_strip_visual.py  power_strip_controller.py
src/power_strip_sim/: package.xml
src/power_strip_sim/src/: mqtt_fake_arduino.py  mqtt_power_strip_visual.py  power_strip_controller.py  power_strip_visual.py
src/power_strip_sim/srv/: GetOutlet.srv  SetOutlet.srv
src/powerstrip_package/: package.xml  setup.cfg  setup.py
src/powerstrip_package/powerstrip_package/: ros2_powerstrip.py  simulated_arduino.py
